--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <exec.mainClass>br.com.allantrindade.jogodobicho.JogoDoBicho</exec.mainClass>
+        <exec.mainClass>br.com.allantrindade.jogodobicho</exec.mainClass>
     </properties>
 </project>
